fix: add missing script tag to base html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,11 @@
         gtag('config', 'G-39YFYGFEW3');
     </script>
 
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-39YFYGFEW3');
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-39YFYGFEW3');
     </script>
 </head>
 <body>
