fix: get markdown to render correctly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
     </script>
 </head>
 <body>
-    {{ content }}
+    <main>
+        {{ content }}
+    </main>
     {% include analytics.html %}
 </body>
 </html>
