feat: add CSS to better format website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
         gtag('js', new Date());
         gtag('config', 'G-39YFYGFEW3');
     </script>
+
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 </head>
 <body>
     <main>
