fix: correct URL for loading CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         gtag('config', 'G-39YFYGFEW3');
     </script>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+    <link rel="stylesheet" href="https://makedon.ski/css/style.css">
 </head>
 <body>
     <main>
